--- a/build.gradle
+++ b/build.gradle
@@ -15,11 +15,26 @@ repositories {
     mavenCentral()
 }
 
+gretty {
+    contextPath = '/'
+}
+
 dependencies {
     providedCompile 'javax.ws.rs:javax.ws.rs-api:2.0.1'
+
+    compile 'io.swagger:swagger-jersey2-jaxrs:1.5.12'
+
     compile 'org.glassfish.jersey.core:jersey-server:2.22.2'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+
+    //lombok boilerplate generation
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.20'
+    //jackson json
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     // Jersey core Servlet 3.x implementation
     compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.22.2'
     // Jersey Test Framework — Grizzly2 container
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-grizzly2:2.22.2'
+
+
 }
