--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,8 +1,13 @@
 # Root logger option
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=INFO, stdout, FileAppender
 
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}|%-5p|%logger{36}|%X{requestId}|%m%n
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}|%5p|%l{36}|%X{requestId}|%m%n
+
+log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.FileAppender.File=./logs/rates.log
+log4j.appender.FileAppender.layout = org.apache.log4j.PatternLayout
+log4j.appender.FileAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss}|%5p|%l{36}|%X{requestId}|%m%n
