--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,7 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStart:
+    - location: scripts/write_codedeploy_config.sh
     - location: scripts/start_server
       timeout: 300
       runas: root
